--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,13 @@
 Package: describer
-Title: What the Package Does (one line, title case)
+Title: Describe data in R
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph)
-Depends: R (>= 3.2.1)
-License: What license is it under?
+Description: Allows users to quickly and easily describe data using
+    common descriptive statistics.
+Authors@R: person("Paul", "Hendricks", , "paul.hendricks.2013@owu.edu", c("aut", "cre"))
+URL: https://github.com/paulhendricks/describer
+BugReports: https://github.com/paulhendricks/describer/issues
+Depends: R (>= 3.1.2)
+License: MIT + file LICENSE
 LazyData: true
+Suggests:
+    testthat
